[package]
name = "packer"
version = "0.1.0"
edition = "2021"

[dependencies]
hemtt-pbo = { git = "https://github.com/BrettMayson/HEMTT" }
lazy_static = "1.4.0"
regex = "1.7.0"
serde_json = "1.0.91"
synixe-model = { git = "https://github.com/SynixeContractors/Crate", default-features = false, features = ["missions"] }
walkdir = "2.3.2"
